# EmbeddedBoundary

./: .gitignore  .travis.yml  2DEmbeddedBoundary.ipynb  CMakeLists.txt  Makefile  README.md
docs/: 2DEmbeddedBoundary.ipynb  doxygen_config
inputs/line/: parameters.inp
outputs/: LaplacianConvergence.ipynb  circle_output.txt  laplace-0.txt  laplace-1.txt  laplace-2.txt  laplace-3.txt  laplace-5.txt  laplace-6.txt  output_boundary.txt  square_solution.txt
outputs/sample_vtu_geometries/: circle.vtu  line.vtu
outputs/solver_analysis/: LaplacianConvergence.ipynb  LaplacianConvergenceHO.ipynb  LaplacianFDM.ipynb  mesh_refine.sh  square_laplace.txt
outputs/solver_analysis/laplace_mesh_refine/circle2/: laplace-2.txt  laplace-3.txt  laplace-4.txt  laplace-5.txt  laplace-6.txt
outputs/solver_analysis/laplace_mesh_refine/circle4/: laplace-2.txt  laplace-3.txt  laplace-4.txt  laplace-5.txt  laplace-6.txt
outputs/solver_analysis/laplace_mesh_refine/circle_2rad2/: laplace-2.txt  laplace-3.txt  laplace-4.txt  laplace-5.txt  laplace-6.txt
outputs/solver_analysis/laplace_mesh_refine/circle_bd_moments/: laplace-1.txt
outputs/solver_analysis/laplace_mesh_refine/circle_origin2/: laplace-2.txt  laplace-3.txt  laplace-4.txt  laplace-5.txt  laplace-6.txt
outputs/solver_analysis/laplace_mesh_refine/circle_test/: laplace-6.txt  laplace-7.txt  laplace-8.txt
outputs/solver_analysis/laplace_mesh_refine/ellipse2/: laplace-2.txt  laplace-3.txt  laplace-4.txt  laplace-5.txt  laplace-6.txt  laplace-7.txt
outputs/solver_analysis/laplace_mesh_refine/ellipseflip2/: laplace-1.txt  laplace-2.txt  laplace-3.txt  laplace-4.txt  laplace-5.txt  laplace-6.txt
src/: Geometry.cc  main.cc  test_main.cc
src/geometry/: Geometry.cc  Geometry.h  boundary.cc  boundary.h  build_mesh.cc  build_mesh.h
src/geometry/tests/: boundary_tests.cc  geometry_tests.cc
src/helpers/: geometry_objects.cc  geometry_objects.h  math_helpers.cc  math_helpers.h
src/helpers/tests/: helper_tests.cc
src/inputs/: input_base.h
src/inputs/circle/: circle.cc  circle.h  circle_test.cc  circle_test.h
src/inputs/circle/tests/: input_tests.cc
src/inputs/equations/: cos_sin_neumann.cc  cos_sin_neumann.h  laplace_neumann.cc  laplace_neumann.h  solver_input_base.h
src/inputs/geometries/: geometry_input_base.h
src/inputs/geometries/circle/: circle.cc  circle.h  circle_shift.cc  circle_shift.h  circle_test.cc  circle_test.h
src/inputs/geometries/circle/tests/: input_tests.cc
src/inputs/geometries/ellipse/: ellipse.cc  ellipse.h  ellipse_flip.cc  ellipse_flip.h
src/inputs/geometries/line/: line.cc  line.h
src/inputs/geometries/line/tests/: input_tests.cc
src/inputs/geometries/square/: square.cc  square.h
src/inputs/line/: line.cc  line.h  line_zero.cc  line_zero.h
src/inputs/line/tests/: input_tests.cc
src/inputs/python_helpers/: mesh.txt  setup_mesh.py
src/inputs/square/: square.cc  square.h
src/normals/: NormalBase.h  Normals.cc  Normals.h  normals.cc  normals.h
src/normals/tests/: normal_tests.cc
src/plotting/: make_vtk.py  plotting.py  tools.py
src/solvers/: laplace_operator.cc  laplace_operator.h  laplace_operator_ho.cc  laplace_operator_ho.h  laplacian.cc  laplacian.h
src/solvers/tests/: solver_tests.cc  square_laplace.gold
